--- a/src/app.css
+++ b/src/app.css
@@ -112,8 +112,8 @@ transition: ease-in-out 0.2s;
     padding: 5px;
 }
 
-/* .card-shimmer{
+.card-shimmer{
     width: 400px;
     height: 400px;
     background-color: #0f0f0f0f;
-} */
+}
